--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- Emoji as a favicon -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨🏻‍💻</text></svg>">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨🏻‍💻</text></svg>">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
    252525 section2
   222831 footer and nav-->
   <!-- #03DAC6 #121212 #333 -->
-  <!-- #1b262c #222831 #2c2828 #283149 #27323a #232931 #313131 #222222 #212121 #26282b #343434-->
+  <!-- #131217 #1b262c #222831 #2c2828 #283149 #27323a #232931 #313131 #222222 #212121 #26282b #343434-->
   <div class="banner-bg">
     <!-- Start Header -->
     <header>
@@ -118,7 +119,8 @@
           </ul>
         </div>
       </div>
-      <div style="width: 2rem;height: 2rem; background-color: rgba(255, 255, 255, 0.2); color: white;border-radius: 50%;position: absolute; margin-top: 85vh;text-align: center;line-height: 2rem;">
+      <div
+        style="width: 2rem;height: 2rem; background-color: rgba(255, 255, 255, 0.2); color: white;border-radius: 50%;position: absolute; margin-top: 85vh;text-align: center;line-height: 2rem;">
         <i class="fas fa-angle-down"></i>
       </div>
     </div>
@@ -126,100 +128,105 @@
   <!-- End Banner Image-->
 
   <!-- Start About Me Area -->
-  <div style="background-color: #252525;padding-bottom: 3rem;padding-top: 3rem;">
-  <div class="container">
-    <h1 class="about-me-text" style="margin-top: 0;">About Me</h1>
-    <div class="row">
-      <div class="col-lg-5 col-md-5 col-sm-10">
-        <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
-      </div>
-      <div class="col-lg-7 col-md-7 col-sm-10">
-        <h2>I am Rupdeep Saha</h2>
-        <span> Developer | Web · iOS · Android</span>
-        <p style="margin-top: 2rem;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos minima, iste
-          eaque veritatis doloribus neque inventore ut numquam molestiae nesciunt qui deleniti aperiam eveniet minus
-          exercitationem, eligendi sapiente natus assumenda?</p>
+  <div style="padding-top: 3rem;">
+    <div class="container">
+      <h1 class="about-me-text">About Me</h1>
+      <div class="row">
+        <div class="col-lg-5 col-md-5 col-sm-10">
+          <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_WdTEui.json" background="transparent"
+            speed="1" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
+        </div>
+        <div class="col-lg-7 col-md-7 col-sm-10">
+          <h2>I am Rupdeep Saha</h2>
+          <span> Developer | Web · iOS · Android</span>
+          <p style="margin-top: 2rem;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos minima,
+            iste
+            eaque veritatis doloribus neque inventore ut numquam molestiae nesciunt qui deleniti aperiam eveniet minus
+            exercitationem, eligendi sapiente natus assumenda?</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
   <!-- End About Me Area -->
 
   <!-- Start Experience and Skills Area -->
-  <div style="padding-bottom: 3rem;padding-top: 3rem;background-color: #121212;">
-  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem">
-    <div class="row">
-      <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
-        <h2 class="text-uppercase">Skills</h2>
-        <ul class="skill-list">
-          <li class="skill-list-item">
-            <span>React &nbsp;<img src="./assets/icons/react.svg" alt="React" width="25px" height="25px"></span>
-            <span style="float: right;">25%</span>
-            <div class="progress" style="margin-top: 1rem;">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">
-                <span></span>
+  <div style="padding-top: 3rem">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
+          <h2 class="text-uppercase">Skills</h2>
+          <ul class="skill-list">
+            <li class="skill-list-item">
+              <span>React &nbsp;<img src="./assets/icons/react.svg" alt="React" width="25px" height="25px"></span>
+              <span style="float: right;">25%</span>
+              <div class="progress" style="margin-top: 1rem;">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span></span>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skill-list-item">
-            <span>HTML5 &nbsp;<img src="./assets/icons/html5.svg" alt="React" width="25px" height="25px" style="margin-bottom: 4px;"></span>
-            <span style="float: right;">25%</span>
-            <div class="progress" style="margin-top: 1rem;">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">
+            </li>
+            <li class="skill-list-item">
+              <span>HTML5 &nbsp;<img src="./assets/icons/html5.svg" alt="React" width="25px" height="25px"
+                  style="margin-bottom: 4px;"></span>
+              <span style="float: right;">25%</span>
+              <div class="progress" style="margin-top: 1rem;">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                  aria-valuemax="100">
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skill-list-item">
-            <span>CSS3 &nbsp;<img src="./assets/icons/css3.svg" alt="React" width="25px" height="25px" style="margin-bottom: 4px;"></span>
-            <span style="float: right;">25%</span>
-            <div class="progress" style="margin-top: 1rem;">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">
+            </li>
+            <li class="skill-list-item">
+              <span>CSS3 &nbsp;<img src="./assets/icons/css3.svg" alt="React" width="25px" height="25px"
+                  style="margin-bottom: 4px;"></span>
+              <span style="float: right;">25%</span>
+              <div class="progress" style="margin-top: 1rem;">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                  aria-valuemax="100">
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skill-list-item">
-            <span>JavaScript &nbsp;<img src="./assets/icons/javascript.svg" alt="React" width="25px" height="25px"></span>
-            <span style="float: right;">25%</span>
-            <div class="progress" style="margin-top: 1rem;">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">
+            </li>
+            <li class="skill-list-item">
+              <span>JavaScript &nbsp;<img src="./assets/icons/javascript.svg" alt="React" width="25px"
+                  height="25px"></span>
+              <span style="float: right;">25%</span>
+              <div class="progress" style="margin-top: 1rem;">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                  aria-valuemax="100">
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="skill-list-item">
-            <span>Python &nbsp;<img src="./assets/icons/python.svg" alt="React" width="25px" height="25px"></span>
-            <span style="float: right;">25%</span>
-            <div class="progress" style="margin-top: 1rem;">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">
+            </li>
+            <li class="skill-list-item">
+              <span>Python &nbsp;<img src="./assets/icons/python.svg" alt="React" width="25px" height="25px"></span>
+              <span style="float: right;">25%</span>
+              <div class="progress" style="margin-top: 1rem;">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                  aria-valuemax="100">
+                </div>
               </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="col-lg-6 col-md-12 col-sm-12">
-        <h2 class="text-uppercase">Experience</h2>
-        <ul class="experience-list">
-          <li class="experience-list-item">
-            <span>Front End Web Developer</span>
-            <span style="float: right;">2018-2019</span>
-            <p>jddddddddddddddddddddddddddddddd</p>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <h2 class="text-uppercase">Experience</h2>
+          <ul class="experience-list">
+            <li class="experience-list-item">
+              <span>Front End Web Developer</span>
+              <span style="float: right;">2018-2019</span>
+              <p>jddddddddddddddddddddddddddddddd</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
   <!-- End Experience and Skills Area -->
 
   <!-- Start Projects Area -->
   <!-- If we want a carousel we can do it with https://frontendscript.com/responsive-css-only-carousel-slider/ -->
-
-  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
+  <div style="padding-top: 3rem">
+  <div class="container">
     <h1 class="about-me-text">Projects</h1>
     <div class="card-container">
       <div class="card" style="width: 20rem;height: 20rem;">
@@ -235,50 +242,57 @@
     <h5><a href="">...view all projects</a></h5>
   </div>
   </div>
+</div>
   <!-- End Projects Area -->
 
   <!-- Start Footer Area -->
-  <footer style="background-color: #1b262c;">
+  <footer style="background-color: #26282b">
     <div class="container" style="margin-top: 3rem;margin-bottom: 3rem; text-align: left;">
-    <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: #03DAC6">Let's talk</span></h2>
-    <div class="modal fade" id="contactModal" tabindex="-1" role="">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
+      <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal"
+          style="cursor: pointer;color: #03DAC6">Let's talk</span></h2>
+      <div class="modal fade" id="contactModal" tabindex="-1" role="">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
 
-          <div class="modal-header">
-            <span><h3 style="margin-top: 0;">Contact Me</h3></span>
-            <span>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </span>
-          </div>
-          <div class="modal-body">
-            <form action="action_page.php">
-              <div class="form-group">
-              <label for="fullname">Name</label>
-              <input type="text" class="form-control" id="fullname" name="fullname" placeholder="John Doe" required>
+            <div class="modal-header">
+              <span>
+                <h3 style="margin-top: 0;">Contact Me</h3>
+              </span>
+              <span>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </span>
             </div>
-            <div class="form-group">
-              <label for="email">Email Address</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="abc@xyz.com" required>
+            <div class="modal-body">
+              <form action="action_page.php">
+                <div class="form-group">
+                  <label for="fullname">Name</label>
+                  <input type="text" class="form-control" id="fullname" name="fullname" placeholder="John Doe" required>
+                </div>
+                <div class="form-group">
+                  <label for="email">Email Address</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="abc@xyz.com" required>
+                </div>
+                <div class="form-group">
+                  <label for="subject">Subject</label>
+                  <input type="subject" class="form-control" id="subject" name="subject" placeholder="Enter Subject"
+                    required>
+                </div>
+                <div class="form-group">
+                  <label for="message">Message</label>
+                  <textarea id="message" class="form-control" name="message"
+                    placeholder="Leave a message for me, I will get back to you at the earliest!" rows="5"
+                    required></textarea>
+                </div>
+                <input type="submit" value="Send" class="btn btn-round">
+
+              </form>
             </div>
-            <div class="form-group">
-              <label for="subject">Subject</label>
-              <input type="subject" class="form-control" id="subject" name="subject" placeholder="Enter Subject" required>
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea id="message" class="form-control" name="message" placeholder="Leave a message for me, I will get back to you at the earliest!" rows="5" required></textarea>
-            </div>
-              <input type="submit" value="Send" class="btn btn-round">
-          
-            </form>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </footer>
   <!-- End Footer Area -->
   <!--   Core JS Files   -->
@@ -296,7 +310,7 @@
 
   <!-- Main JS -->
   <script src="./js/main.js"></script>
-  
+
 </body>
 
 </html>
